# sis-tekniktr

./: .gitignore  README.md  SETUP_GUIDE.md  kapatilmamis_montajlar.txt
Mongodb/admin/: system.version.metadata.json
Mongodb/sis_teknik/: aski_aparat.bson  aski_aparat.metadata.json  audit_logs.bson  audit_logs.metadata.json  daily_closed_technicians.bson  daily_closed_technicians.metadata.json  delete_otp_requests.metadata.json  entries.bson  entries.metadata.json  irsaliyeler.bson  irsaliyeler.metadata.json  kurulum_ekip.metadata.json  kurulum_locations.metadata.json  montaj_entries.bson  montaj_entries.metadata.json  montaj_kayitlari.bson  montaj_kayitlari.metadata.json  montaj_reports.bson  montaj_reports.metadata.json  musteri_kabul.metadata.json  print_queue.metadata.json  settings.bson  settings.metadata.json  sms_queue.bson  sms_queue.metadata.json  users.bson  users.metadata.json
apps/frontend-web/: index.html  repair-slip-print.css  repair-slip.css  repair-slip.html  tamir.html
backend/: Cargo.toml  README.md
backend/postgresql/: README.md  import_from_mongodb.py  requirements.txt  schema.sql
backend/services/api/: Cargo.toml
backend/services/api/src/: auth.rs  crypto.rs  db.rs  handlers.rs  main.rs  models.rs  sms.rs  sms_queue.rs
backups/site/: site_26.02.2026.manifest.txt
deploy/almalinux/: README.md  api.service  install_and_start.sh
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: repair-slip.css  repair-slip.html
frontend/src/: App.css  App.jsx  main.jsx
(+37 files in other folders)
