[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../crates/common" }
utils = { path = "../../crates/utils" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
mongodb = "3.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenvy = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
http = "1.0"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
jsonwebtoken = "9.2"
hmac = "0.12"
sha2 = "0.10"
